Web app is working for classification

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -13,4 +13,69 @@
 
 	<title> AutoML </title>
 
+	<div class="jumbotron">
+  		<h1 class="display-4">Welcome to AutoLearn.AI!</h1>
+  		<p class="lead"> AutoLearn is an automated machine learning and data analytics tool.  </p>
+  		<hr class="my-4">
+  		<p>It uses genetic algorithms provided in Python's TPOT library to train and validate multiple machine learning models in order to find the best ones.</p>
+	</div>
+
+	<div class="jumbotron bg-light">
+		<form method="POST" enctype=multipart/form-data>
+			<div class="form-group">
+				<h3><label for="problemType">What type of problem is this?</label></h3>
+				<select class="form-control" name="task" id="problemType">
+					<option>Classification</option>
+					<option>Regression</option>
+				</select>
+			</div>
+			<br>
+			<div class="form-group">
+				<h3><label for="dataset">Upload Data</label></h3>
+
+				<input type="file" name="file" id="dataset">
+			</div>
+			<br>
+			<div class="form-group">
+				<h3>What is the name of the target column?</h3>
+				<input type="text" class="form-control" name="targetColumn" placeholder="Enter target column">
+			</div>
+			<br>
+			<div class="form-group">
+				<h3><label for="formControlRange">Accuracy/Training Time Tradeoff</label></h3>
+				<label class="pull-left">Faster Training Time</label>
+				<label class="pull-right">More Accuracy</label>
+				<input type="range" class="form-control-range" name="speed" id="formControlRange">
+			</div>
+			<br>
+
+			<button type="submit" class="btn btn-primary">Run AutoLearn</button>
+		</form>
+	</div>
+
+
+	{% if metrics is not none %}
+		<div class="jumbotron bg-white">
+  			<h2>{{ metrics['task'] }} Results</h2>
+  			<br>
+  			<h3>Model Name: {{metrics['model_name']}}</h3>
+  			<br>
+  			<h3>Accuracy</h3>
+  			<div class="progress">
+  				<div class="progress-bar" name="accuracy" style="width:{{ metrics['accuracy'] }}%" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"> {{metrics['accuracy']}} %</div>
+  			</div>
+  			<br>
+  			<h3>Precision</h3>
+  			<div class="progress">
+  				<div class="progress-bar" name="precision" style="width: {{ metrics['precision'] }}%" role="progressbar" aria-valuenow="{{ metrics['precision'] }}" aria-valuemin="0" aria-valuemax="100"> {{metrics['precision']}} %</div>
+  			</div>
+  			<br>
+  			<h3>Recall</h3>
+  			<div class="progress">
+  				<div class="progress-bar" name="recall" style="width: {{ metrics['recall'] }}%" role="progressbar" aria-valuenow="{{ metrics['recall'] }}" aria-valuemin="0" aria-valuemax="100"> {{metrics['recall']}} %</div>
+  			</div>
+  			<br>
+  		</div>
+	{% endif %}
+
 </html>
