Visualizations are working

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -111,6 +111,10 @@
 	  		 <br>
 
   		</div>
+  		<div class="jumbotron">
+			<h2>Feature Importances</h2>
+			<img src="{{ metrics['feat_importances'] }}"></img>
+		</div>
 	{% endif %}
 
 </html>
