Added env file and got web app fully working

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -111,7 +111,7 @@
 	  		 <br>
 
   		</div>
-  		<div class="jumbotron">
+  		<div class="jumbotron bg-light">
 			<h2>Feature Importances</h2>
 			<img src="{{ metrics['feat_importances'] }}"></img>
 		</div>
